nodejs react setting

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,4 +1,4 @@
-  # 서버 포트 설정
+ # 서버 포트 설정
 server.port=8081
 # thymeleaf 파일 설정
 spring.thymeleaf.prefix=classpath:templates/
@@ -8,8 +8,13 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 # thymeleaf 캐쉬 모드
 spring.thymeleaf.cache=false
-# 소스파일에 변화가 있을 때 자동으로 서버 재 시작 설정
+# 소스파일에 변화가 있을 때 자동으로 서버 재 시작 설정
 spring.devtools.restart.enabled=true
+
+# encoding
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+server.servlet.encoding.enabled=true
 
 # DB info : Azure Postgresql
 spring.datasource.driverClassName=org.postgresql.Driver
