--- a/build.gradle
+++ b/build.gradle
@@ -48,3 +48,7 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2', version: '2.7.9'
     
 }
+
+tasks.named('test') {
+	useJUnitPlatform()
+}
