게시판 테스트 : insert 완료

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -16,11 +16,14 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 server.servlet.encoding.enabled=true
 
+# column name to camel case : SELECT 칼럼과 멤버 변수 매핑(바인딩)하기
+mybatis.configuration.map-underscore-to-camel-case=true
+
 # DB info : Azure Postgresql
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://he22ra-planet.postgres.database.azure.com:5432/postgres?user=he22ra&password=Exo040812$&sslmode=require
-spring.datasource.username=he22ra
-spring.datasource.password=Exo040812$
+spring.datasource.hikari.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.jdbc-url=jdbc:postgresql://he22ra-planet.postgres.database.azure.com:5432/postgres?user=he22ra&password=Exo040812$&sslmode=require
+spring.datasource.hikari.username=he22ra
+spring.datasource.hikari.password=Exo040812$
 
 spring.datasource.hikari.connection-timeout=3000
 spring.datasource.hikari.validation-timeout=3000
