--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,13 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'	//jpa는 테이블 조인이 원활하지 않음
+	
+	// https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api
+	implementation group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'
 	
 	implementation 'com.google.code.gson:gson'
-    compileOnly 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'com.h2database:h2'
 	
