--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -20,10 +20,12 @@ server.servlet.encoding.enabled=true
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # DB info : Azure Postgresql
-spring.datasource.hikari.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.jdbc-url=jdbc:postgresql://he22ra-planet.postgres.database.azure.com:5432/postgres?user=he22ra&password=Exo040812$&sslmode=require
+# spring.datasource.hikari.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:postgresql://he22ra-planet.postgres.database.azure.com:5432/postgres?user=he22ra&password=Exo040812$&sslmode=require
 spring.datasource.hikari.username=he22ra
 spring.datasource.hikari.password=Exo040812$
+spring.datasource.hikari.connection-test-query=SELECT NOW() FROM myboard
 
 spring.datasource.hikari.connection-timeout=3000
 spring.datasource.hikari.validation-timeout=3000
@@ -32,4 +34,3 @@ spring.datasource.hikari.max-lifetime=240000
 spring.datasource.hikari.maximum-pool-size=20
       
 spring.web.resources.static-locations=META-INF:/resources, classpath:/resources, classpath:/static, classpath:/static/dist
-
