jdbc log 옵션 설정 : build.gradle, logback-spring.xml

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -25,7 +25,7 @@ spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:postgresql://he22ra-planet.postgres.database.azure.com:5432/postgres?user=he22ra&password=Exo040812$&sslmode=require
 spring.datasource.hikari.username=he22ra
 spring.datasource.hikari.password=Exo040812$
-spring.datasource.hikari.connection-test-query=SELECT NOW() FROM myboard
+spring.datasource.hikari.connection-test-query=SELECT * FROM myboard
 
 spring.datasource.hikari.connection-timeout=3000
 spring.datasource.hikari.validation-timeout=3000
