회원가입 : api방식 DB저장완료

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -19,6 +19,9 @@ server.servlet.encoding.enabled=true
 # column name to camel case : SELECT 칼럼과 멤버 변수 매핑(바인딩)하기
 mybatis.configuration.map-underscore-to-camel-case=true
 
+# HttpRequestMethodNotSupportedException 
+spring.mvc.hiddenmethod.filter.enabled=true
+
 # DB info : Azure Postgresql
 # spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
