--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -25,10 +25,11 @@ spring.mvc.hiddenmethod.filter.enabled=true
 # DB info : Azure Postgresql
 # spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:postgresql://he22ra-planet.postgres.database.azure.com:5432/postgres?user=he22ra&password=Exo040812$&sslmode=require
-spring.datasource.hikari.username=he22ra
-spring.datasource.hikari.password=Exo040812$
-spring.datasource.hikari.connection-test-query=select * from myboard
+# jdbc:postgresql://{host}[:{port}]/[{database}]
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:postgresql://localhost:5432/planet
+spring.datasource.hikari.username=postgres
+spring.datasource.hikari.password=0408
+spring.datasource.hikari.connection-test-query=select * from tb_post
 
 spring.datasource.hikari.connection-timeout=3000
 spring.datasource.hikari.validation-timeout=3000
